# fast_api_tutorial

./: .gitattributes  .gitignore  main.py  pyproject.toml
cookies_headers/: cookie_header.py
dependency_injection/: dependency.py
path_parameter/: pathparameter.py
pathparameter/: pathparameter.py
query_parameter/: query_params.py
request_body/: request_body.py
response_modal/: response_modal.py
security/: dummy_auth.py  jwt_auth.py
status_code_&_error_handling/: codes_error_handle.py
